# vim-viperos

./: CMakeLists.txt
include/: filebuf.h  terminal.h  tui.h
src/: filebuf.c  main.c  terminal.c  tui.c
